--- a/app/pages/home-page/home-page.html
+++ b/app/pages/home-page/home-page.html
@@ -1,6 +1,6 @@
 <div class="c-dashboard">
   <div class="c-filters__container">
-    <v-filter-employees></v-filter-employees>
+    <v-filter-employees v-on-filter-change="homePageVm.handleFilterChangeEvent"></v-filter-employees>
   </div>
 
   <employees-list employees-list="homePageVm.employees"></employees-list>
