--- a/app/pages/home-page/home-page.html
+++ b/app/pages/home-page/home-page.html
@@ -3,7 +3,7 @@
     <v-filter-employees v-on-filter-change="homePageVm.handleFilterChangeEvent"></v-filter-employees>
   </div>
 
-  <employees-list employees-list="homePageVm.employees"></employees-list>
+  <employees-list filter="homePageVm.filter" employees-list="homePageVm.employees"></employees-list>
 
   <div class="c-dashboard__footer">
     <button class="c-button">
